[Fixes #113323983] The need to bring the inspector to the front was getting in the way of the click. Now we assign the inspector view a high, constant z-index and it is always in front.

--- a/apps/dg/resources/dg.css
+++ b/apps/dg/resources/dg.css
@@ -136,6 +136,7 @@
 .inspector-view{
     background-color: #01879E;
     border-radius: 6px;
+    z-index: 1000;
 }
 
 .inspector-cover {
